# CoeEqPluginVST

./: .gitignore  CMakeLists.txt  README.md
Source/: SSLEQAudioProcessor.h  SSLEQEditor.cpp  SSLEQEditor.h  SSLEQPlugin.cpp  SSLEQPlugin.h
include/: SSLEQProcessor.h
